# jinu_manipulator_develop

./: README.md
jinu_manipulator/: CHANGELOG.rst  CMakeLists.txt  package.xml
jinu_manipulator_control/: CMakeLists.txt  package.xml
jinu_manipulator_control/include/: jm_simple.h  plugin.h
jinu_manipulator_control/launch/: jinu_manipulator_control.launch
jinu_manipulator_control/src/: jm_simple.cc  note
jinu_manipulator_control/worlds/: jinu_manipulator_gazebo.world
jinu_manipulator_controller/: CMakeLists.txt  package.xml
jinu_manipulator_controller/include/: Common.h  IndexNotation.h  dynamics.h  jinu_manipulator_controller.h  motor_controller.h  rmd_can.h  rmd_log.h  rmd_motor.h  shared_memory.h  spi2can.h
jinu_manipulator_controller/scripts/: update_spi_rules
jinu_manipulator_controller/src/: dynamics.cpp  jinu_manipulator_controller.cpp  motor_controller.cpp  rmd_can.cpp  rmd_motor.cpp  rmd_utils.cpp  spi2can.cpp
jinu_manipulator_description/: CMakeLists.txt  package.xml
jinu_manipulator_description/config/: jinu_manipulator.config  joint_names_jinumanip.yaml
jinu_manipulator_description/launch/: display.launch  jinu_manipulator_rviz.launch  jinu_manipulator_upload.launch
jinu_manipulator_description/meshes/collada/: arm_link.dae  base_link.dae  elbow_link.dae  forearm_link.dae  gripperL.dae  gripperR.dae  shoulder_link.dae  wrist_link.dae
jinu_manipulator_description/meshes/stl/: arm_link.stl  base_link.stl  elbow_link.stl  forearm_link.stl  gripper_link.stl  gripper_sub_link.stl  shoulder_link.stl  wrist_link.stl
jinu_manipulator_description/rviz/: jinu_manipulator.rviz
jinu_manipulator_description/scripts/: update_gazebo_model
jinu_manipulator_description/urdf/: grippers.txt  jinu_manipulator.gazebo.xacro  jinu_manipulator.sdf  jinu_manipulator.urdf  jinu_manipulator.urdf.xacro  jinu_manipulator_old_config.urdf  jinu_manipulator_robot.urdf.xacro  jinumanip.csv  jinumanip.urdf
jinu_manipulator_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
jinu_manipulator_gazebo/config/: arm_controller.yaml
jinu_manipulator_gazebo/launch/: controller_utils.launch  gazebo.launch  jinu_manipulator_controller.launch  jinu_manipulator_gazebo.launch
jinu_manipulator_gazebo/src/: jinu_gripper_sub_publisher.cpp
jinu_manipulator_gazebo/worlds/: gazebo.world  jinu_manipulator_gazebo.world
jinu_manipulator_libs/: CMakeLists.txt  package.xml
jinu_manipulator_msgs/: CMakeLists.txt  package.xml
